[package]
name = "volv0x"
version = "0.0.1"
edition = "2021"
authors = [
    "Seb Ospina <kraige@gmail.com>"
]
description  = "volv0x wearables"
repository   = "https://github.com/sebosp/volv0x"
license = "MIT"

keywords = [
    "esp32",
    "embedded",
    "wearables",
    "volv0x",
]
categories = [
    "no-std",
]

[dependencies]
heapless = "0.8.0"
bitflags = "2.5.0"

[dev-dependencies]
vl53l0x.workspace = true
